[main] fix layout issues

--- a/src/app/styles/base.scss
+++ b/src/app/styles/base.scss
@@ -129,7 +129,7 @@
   border-radius: 50%;
   z-index: 1111;
   cursor: pointer;
-  border: none;
+  border: 1px solid transparent;
   transition: all 0.3s ease;
 
   &:focus-visible {
