--- a/src/app/styles/sections/blog-section.scss
+++ b/src/app/styles/sections/blog-section.scss
@@ -24,9 +24,12 @@
     padding: 25px;
     margin: -80px 0 0 50px;
     position: relative;
+    border: 1px solid transparent;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
     .theme-light & {
       background: $px-gray;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     @include down-md {
