--- a/src/app/styles/sections/home-banner.scss
+++ b/src/app/styles/sections/home-banner.scss
@@ -14,6 +14,7 @@
     border-radius: 50%;
     background: $px-dark;
     z-index: 0;
+    transition: background-color 0.2s ease-in-out;
     .theme-light & {
       background: $px-gray;
     }
@@ -100,6 +101,9 @@
     }
     .btn-bar {
       padding-top: 15px;
+    }
+    h6, h1, .lead, .desc {
+      transition: color 0.2s ease-in-out;
     }
   }
 }
